# omni-slo-generator

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish_docker.yaml
omni_slo_generator/: collection.py  compute.py  config.py  export.py  main.py
sample/: config.yaml
