[tool.poetry]
name = "omni-slo-generator"
version = "1.0.0"
description = "All in one solution for generating SLO metrics"
authors = ["David Jetelina <david.jetelina@heureka.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
slo-generator = {version = "^2.0.1", extras = ["prometheus", "cloud_storage", "cloud_monitoring", "bigquery"]}
cachetools = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
